tests/error/logical_not_int.magi
// TEST: Logical not on int should error

main :: () -> i32 {
    a := 42
    b := !a
    return 0
}
